# Operations-Tensorielles-Simpliciales

./: .gitignore  Gemini_hallicination.py  Homology_calculation.ipynb  README.md  analysis_log_2025-06-24_21-18-47.txt  analysis_log_2025-06-24_21-34-07.txt  analysis_log_2025-06-24_21-41-12.txt  analysis_log_2025-06-24_21-55-05.txt  analysis_log_2025-06-24_22-06-50.txt  analysis_log_2025-06-24_23-04-28.txt  batch_conjugation_test.py  batch_conjugation_test_with_counts.py  bdry_network_experiment1.py  boundary_augmented_net_batch.py  boundary_augmented_net_once_per_epoch.py  boundary_augmented_network.py  boundary_augmented_versus_random_tensor_augmented_network.py  chain_complex.py  cochain_complex.py  cochain_complex_memoized_mod2.py  complexes_sage.sage.txt  consolidated_experiment.py  consolidated_experiment_with_n01.py  degenerate_counterexample.py  discrepancy_test.py  examples_range_tensors.py  experiment_results.csv  homology_syzygy.ipynb  loss_experiment.py  n_cycle_conjugation.py  n_hypergroupoid_conjecture.py  normalized_boundary_augmented_net_with_Hadamard.py  operations_tensorielles_simpliciales.py  output.txt  permutation_statistics.py  petersen_permutation_test.py  pyproject.toml  random_zero_one_mask_cocycle_test.py  symbolic_tensor_ops-DESKTOP-M2MA3HI.py  symbolic_tensor_ops.py  (+6 more)
SimplicialTensors-Experiments/: README.md  requirements.txt
docs/: no_terminal_troubleshooting.md  pushing_from_codex_workspace.md
examples/: ab_mlp_demo.py  adjacent_transposition_chain_homotopy.py  cocalc_compatible_tensor_ops.py  count_standard_basis_tensors.py  tensor_ops.py  (+32 more)
(+115 files in other folders)
